# foundry-f1

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  LINKEDIN_LAUNCH.md  README.md  RYAN.md  alp_sorry_manifest.json  ryan_stub_trap.i
asm/: sha256_nasm.asm
docs/: EXCLUSIVE_PROOF_PORTFOLIO.md  mission-control.html
docs/bridge/: CLAUDE_HANDOFF.md  foundry-connector.json
docs/provenance/: ATTENTION_ROUTER_METADATA_BLOCK.txt  CANARY_INDEX.md  CLONE_NOTICE.md  PAPER_COVER_FINGERPRINT.json  PAPER_COVER_NFT_METADATA.json  REPO_FINGERPRINT.json  agent-ryan.bootstrap.json  snapkitty_visual_chain.jsonl
docs/publish/: publisher.py  zenodo_description.txt
frontend/: index.html  package-lock.json  package.json
frontend/assembly/: verifier.ts
frontend/src/: loader.mjs
frontend/tools/: serve.mjs  test-loader.mjs  test-verifier.mjs
include/: audit.h  certify.h  gate.h  goldilocks.h  linker.h  pmat.h  recurrence.h  sha256.h  spectral.h  types.h
legal/: GRAT_FORMATION_DOCUMENT.md
paper/: CONTRIBUTOR_PROMPT.md  attention_nand_decomposition.tex  attention_nand_decomposition_full.tex  collect_contributors.py  fix_pdf.py  gkn_boole_e7_quartic.tex  probe_qwen_identity.py
paper/sections/: amazon_nova-lite-v1_0_20260714T051227Z.tex  amazon_nova-micro-v1_0_20260714T051215Z.tex  amazon_nova-micro-v1_0_20260714T051223Z.tex  amazon_nova-pro-v1_0_20260714T051226Z.tex  anthropic_claude-sonnet-5_adversarial-margin_20260713.tex  claude35_dominance_hypothesis_20260714.tex  claude_claimed_minrep_evidence_20260714.tex  deepseek_v3_2_20260714T051318Z.tex  infinite_matrix_attack_20260714.tex  (+26 more)
sorry-engine/: SORRY_SOLVER_STATUS.md  __init__.py  ancient_sorry_theorem.md  ancient_sorry_theorem.py  roster_sweep.py  sledgehammer.py  snapkitty_gate.py  worm.py  zulip_sledge_bot.py
src/: audit.cpp  certify.cpp  gate.cpp  goldilocks.cpp  linker.cpp  main.cpp  pmat.cpp  recurrence.cpp  sha256.cpp  spectral.cpp  test.cpp
tools/: check-bridge-connector.mjs
(+19 files in other folders)
